Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for destination in list(range:\n",
+    "    for destination in list(range(0,len(travel:\n",
     "        travel_destinations[destination] = travel_destinations[destination]\n",
     "        return travel_destinations"
    ]
