--- a/index.ipynb
+++ b/index.ipynb
@@ -219,29 +219,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for destination in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations[destination] = travel_destinations[destination].title()\n",
+    "        travel_destinations[destination] = travel_destinations[destination]\n",
     "        return travel_destinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
