--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for destination in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations[destination] = travel_destinations[destination]\n",
+    "        travel_destinations[destination] = travel_destinations[destination].title()\n",
     "        return travel_destinations"
    ]
   },
