Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,9 +275,9 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "print(capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia'])\n",
+    "print(capitalize_countries()) # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n",
     "travel_destinations.append('japan')\n",
-    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
+    "print(capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
    ]
   },
   {
