Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,25 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n",
+      "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']\n"
+     ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "print(capitalize_countries()) # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n",
     "travel_destinations.append('japan')\n",
-    "print(capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
+    "print(capitalize_countries()) # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
    ]
   },
   {
